--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.DetailsFragment"
-    android:theme="@style/Theme.AppCompat.NoActionBar">
+    android:background="@drawable/background"
+    android:theme="@style/Theme.AppCompat.NoActionBar"
+    tools:context=".view.DetailsFragment">
 
     <ImageView
         android:id="@+id/imageView"
@@ -13,7 +14,7 @@
         android:layout_height="320dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/selectedimage"
+        android:src="@drawable/selectimage"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,27 +35,48 @@
         <EditText
             android:id="@+id/etxt_Art"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/artnameedittext"
             android:ems="10"
+            android:fontFamily="@font/itim"
             android:hint="Enter Art Name"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:paddingStart="30dp"
+            android:paddingBottom="15dp"
+            android:textColor="#FFD8D8"
+            android:textColorHint="#FFD8D8"
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/etxt_Artist"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
+            android:background="@drawable/artnameedittext"
             android:ems="10"
+            android:fontFamily="@font/itim"
             android:hint="Enter Artist Name"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:paddingStart="30dp"
+            android:paddingBottom="15dp"
+            android:textColor="#FFD8D8"
+            android:textColorHint="#FFD8D8"
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/etxt_Year"
             android:layout_width="wrap_content"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/artnameedittext"
             android:ems="10"
+            android:fontFamily="@font/itim"
             android:hint="Enter Year"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:paddingStart="30dp"
+            android:paddingBottom="15dp"
+            android:textColor="#FFD8D8"
+            android:textColorHint="#FFD8D8"
+            android:textSize="24sp" />
     </LinearLayout>
 
     <Button
@@ -62,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="19dp"
-        android:text="Save"
+        android:background="@drawable/savebutton"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Delete"
+        android:background="@drawable/deletebutton"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
